# BFS-and-DFS-Search-Algorithms-using-python

10847459_ASHILEKPEY_LAB1/: README.md  pyproject.toml
10847459_ASHILEKPEY_LAB1/10847459_ashilekpey_lab1/: bfs.py  dfs.py  ids.py
